Making it crazy.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section>
       <div id="content">
         <p>All of the content and design here is completely editable.</p>
-        <p>The design that you see here is just a template for what could be. Please edit the crap out of it. Move everything around for all I care.</p>
+        <p>The design that you see here is just a template for what could be. Please edit the crap out of it. Move everything around for all I care. Go crazy!</p>
       </div>
     </section>
 
